--- a/gallery_app/views/new_exibition.erb
+++ b/gallery_app/views/new_exibition.erb
@@ -1,1 +1,15 @@
 <h2>Add New Exibition</h2>
+
+<form method="POST" action="/exibitions/new">
+  <div class="form-wrapper">
+
+      <div class="form-el">
+        <label for="title">Title:</label>
+        <input type="text" name="title" id="title"/>
+      </div>
+
+      <div class="form-el">
+        <input type="submit" value="Save"/>
+      </div>
+    </div>
+</form>
