--- a/gallery_app/views/show_exibition.erb
+++ b/gallery_app/views/show_exibition.erb
@@ -1,6 +1,6 @@
 <h2><%= @exibition.title %></h2>
 
-<p>Artist: </p>
+<p>Artist:<%= @exibition.artist.alias %> </p>
 <p>Category: <%= @exibition.category %></p>
 
 <a href="/exibitions/<%= @exibition.id %>/edit">Edit</a>
