--- a/gallery_app/views/edit_exibition.erb
+++ b/gallery_app/views/edit_exibition.erb
@@ -1,22 +1,22 @@
-<h2>Edit <%= @exibition.title %></h2>
+<h2>Edit Exibition "<%= @exibition.title %>"</h2>
 <form method="POST" action="/exibitions/<%= @exibition.id %>">
-  <div class="form-wrapper">
+  <div class="edit-form-wrapper">
 
 
 
-    <div class="form-el">
+    <div class="edit-form-el">
       <label for="title">Title:</label>
       <input type="text" name="title" id="title" value="<%= @exibition.title %>"/>
     </div>
 
-    <div class="form-el">
+    <div class="edit-form-el">
       <label for="category">Category:</label>
       <input type="text" name="category" id="category" value="<%= @exibition.category%>"/>
     </div>
 
-    <div class="form-el">
-      <label for="artist_select">Assign Artist:</label>
-      <select name="artist_id" id="artist_select">
+    <div class="edit-form-el">
+      <label for="artist_selection">Assign Artist:</label>
+      <select name="artist_id" id="artist_selection">
         <% @artists.each do |artist| %>
             <option value=<%= artist.id %>><%= artist.alias %></option>
         <% end %>
@@ -25,7 +25,7 @@
 
 
 
-    <div class="form-el">
+    <div class="edit-form-el">
         <input type="submit" value="Save"/>
       </div>
     </div>
