--- a/gallery_app/views/layout.erb
+++ b/gallery_app/views/layout.erb
@@ -23,6 +23,12 @@
   <h1> ///// Art /////// Gallery ///// </h1>
 
   <%= yield %>
+  <footer>
 
+      <p>Created by: Marcin Sukacz</p>
+      <p>Contact information: <a href="mailto:marcin.sukacz@gmail.com">
+      marcin.sukacz@gmail.com</a>.</p>
+
+  </footer>
 </body>
 </html>
