--- a/gallery_app/views/show_exibition_management.erb
+++ b/gallery_app/views/show_exibition_management.erb
@@ -1,7 +1,7 @@
-<h2>Exibition<%= @exibition.title %></h2>
+<h2>Exibition: <%= @exibition.title %></h2>
 
-<p>Artist:<%= @exibition.artist.alias %> </p>
-<p>Category: <%= @exibition.category %></p>
+<h3>Artist: <%= @exibition.artist.alias %> </h3>
+<h3>Category: <%= @exibition.category %> </h3>
 
-<a href="/exibitions/<%= @exibition.id %>/edit">Edit</a>
+<h3><a href="/exibitions/<%= @exibition.id %>/edit">Edit</a></h3>
 <form action="/exibitions/<%= @exibition.id %>/delete" method="POST"><input type="submit" value="Delete"></form>
