--- a/gallery_app/views/filtered_view.erb
+++ b/gallery_app/views/filtered_view.erb
@@ -1,11 +1,12 @@
-<h2>Exibitions</h2>
+<h2>Filtered Exibitions:</h2>
+
 
 <div id="exibition-wrapper">
   <% @exibitions.each do |exibition| %>
 
   <div class="exibition">
-    <h3><%= exibition.artist.alias %>: <a href="/visitors/<%= exibition.id %>"><%= exibition.title %></a></h3>
-    <p>Category: <%= exibition.category %></p>
+    <h3><a href="/visitors/<%= exibition.id %>"><span class="blinking"><%= exibition.title %></span></a></h3>
+    <h4>by <%= exibition.artist.alias %></h4>
   </div>
 
   <% end %>
