--- a/gallery_app/views/new_artist.erb
+++ b/gallery_app/views/new_artist.erb
@@ -1,14 +1,14 @@
 <h2>Add New Artist</h2>
 
 <form method="POST" action="/artists/new">
-  <div class="form-wrapper">
+  <div class="edit-form-wrapper">
 
-      <div class="form-el">
+      <div class="edit-form-el">
         <label for="alias">Alias:</label>
         <input type="text" name="alias" id="alias"/>
       </div>
 
-      <div class="form-el">
+      <div class="edit-form-el">
         <input type="submit" value="Save"/>
       </div>
     </div>
